feat: com autenticacao
